# sdui40binpick

./: ComputeWithBinPosePytorchKMN.py  README.md  compute_inner_bin.py  config.py  config_wrs.json  edgecheck.py  pyproject.toml  select_bin_position.py
generate_grasp/: generate_grasp_pose_wrs_09.py  grasp_pose_obj_wrs_000009.pickle
sdui40binpick/: compute_grasp_poses_in_bin.py  edgecheck.py  to_cloud.py
utils/: capture_pc_and_depth_in_folder.py
